--- a/Hospital/src/main/webapp/WEB-INF/web.xml
+++ b/Hospital/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,14 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+  	<servlet-name>FrontServletController</servlet-name>
+  	<display-name>FrontServletController</display-name>
+  	<description></description>
+  	<servlet-class>ua.khpi.bibik.hospital_system.servlet.controller.FrontServletController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>FrontServletController</servlet-name>
+  	<url-pattern>/</url-pattern>
+  </servlet-mapping>
 </web-app>
