Add user filter

--- a/Hospital/src/main/resources/configuration/appConfig.properties
+++ b/Hospital/src/main/resources/configuration/appConfig.properties
@@ -1,2 +1,4 @@
-path.page.login = /WEB-INF/jsp/login/login.jsp
+path.page.login = /WEB-INF/jsp/general/login.jsp
+path.page.home = /WEB-INF/jsp/general/home.jsp
+
 path.page.admin = /WEB-INF/jsp/admin/admin.jsp
