--- a/Hospital/src/main/webapp/WEB-INF/web.xml
+++ b/Hospital/src/main/webapp/WEB-INF/web.xml
@@ -10,9 +10,19 @@
 		<description>Set response content type to UTF-8</description>
 		<filter-class>ua.khpi.bibik.hospital_system.filter.EncodingFilter</filter-class>
 	</filter>
+	<filter>
+		<filter-name>UserFilter</filter-name>
+		<display-name>UserFilter</display-name>
+		<description>Check user exists and his type if exists</description>
+		<filter-class>ua.khpi.bibik.hospital_system.filter.UserFilter</filter-class>
+	</filter>
 	<filter-mapping>
 		<filter-name>EncodingFilter</filter-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>UserFilter</filter-name>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<servlet>
 		<servlet-name>FrontServletController</servlet-name>
@@ -43,4 +53,8 @@
 		<servlet-name>default</servlet-name>
 		<url-pattern>*.map</url-pattern>
 	</servlet-mapping>
+	
+	<welcome-file-list>
+		<welcome-file>/WEB-INF/jsp/general/login.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
