Add doctor and patient pages

--- a/Hospital/src/main/resources/configuration/appConfig.properties
+++ b/Hospital/src/main/resources/configuration/appConfig.properties
@@ -2,3 +2,7 @@ path.page.login = /WEB-INF/jsp/general/login.jsp
 path.page.home = /WEB-INF/jsp/general/home.jsp
 
 path.page.admin = /WEB-INF/jsp/admin/admin.jsp
+
+path.page.doctor = /WEB-INF/jsp/doctor/doctor.jsp
+
+path.page.patient = /WEB-INF/jsp/patient/patient.jsp
