--- a/Hospital/src/main/resources/configuration/appConfig.properties
+++ b/Hospital/src/main/resources/configuration/appConfig.properties
@@ -6,3 +6,9 @@ path.page.admin = /WEB-INF/jsp/admin/admin.jsp
 path.page.doctor = /WEB-INF/jsp/doctor/doctor.jsp
 
 path.page.patient = /WEB-INF/jsp/patient/patient.jsp
+
+path.page.user.patients = /WEB-INF/jsp/admin/patientList.jsp
+
+
+path.page.new.user.doctor = /WEB-INF/jsp/admin/newUserDoctor.jsp
+path.page.new.user.patient = /WEB-INF/jsp/admin/newUserPatient.jsp
