--- a/Hospital/src/main/resources/configuration/dbConfig.properties
+++ b/Hospital/src/main/resources/configuration/dbConfig.properties
@@ -1,5 +1,5 @@
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost/hospital?serverTimezone=Europe/Kiev&useSSL=false
+db.url=jdbc:mysql://localhost/hospital?serverTimezone=Europe/Kiev&useSSL=false&useUnicode=true&characterEncoding=UTF-8
 db.user=root
 db.password=
 db.poolsize=20
