Add create update doctors and patients

--- a/Hospital/src/main/resources/configuration/appConfig.properties
+++ b/Hospital/src/main/resources/configuration/appConfig.properties
@@ -12,3 +12,6 @@ path.page.user.patients = /WEB-INF/jsp/admin/patientList.jsp
 
 path.page.new.user.doctor = /WEB-INF/jsp/admin/newUserDoctor.jsp
 path.page.new.user.patient = /WEB-INF/jsp/admin/newUserPatient.jsp
+
+path.page.user.edit.doctor = /WEB-INF/jsp/admin/editDoctor.jsp
+path.page.user.edit.patient = /WEB-INF/jsp/admin/editPatient.jsp
