Update patient info

--- a/Hospital/src/main/resources/configuration/appConfig.properties
+++ b/Hospital/src/main/resources/configuration/appConfig.properties
@@ -15,3 +15,7 @@ path.page.new.user.patient = /WEB-INF/jsp/admin/newUserPatient.jsp
 
 path.page.user.edit.doctor = /WEB-INF/jsp/admin/editDoctor.jsp
 path.page.user.edit.patient = /WEB-INF/jsp/admin/editPatient.jsp
+
+path.page.user.patient.info = /WEB-INF/jsp/doctor/patientInfo.jsp
+
+path.page.appointment.new = /WEB-IFN/jsp/doctor/newAppointment.jsp
