--- a/Hospital/src/main/resources/configuration/appConfig.properties
+++ b/Hospital/src/main/resources/configuration/appConfig.properties
@@ -18,4 +18,5 @@ path.page.user.edit.patient = /WEB-INF/jsp/admin/editPatient.jsp
 
 path.page.user.patient.info = /WEB-INF/jsp/doctor/patientInfo.jsp
 
-path.page.appointment.new = /WEB-IFN/jsp/doctor/newAppointment.jsp
+path.page.appointment.new = /WEB-INF/jsp/doctor/newAppointment.jsp
+path.page.appointments = /WEB-INF/jsp/doctor/appointments.jsp
